--- a/Manager/manager.css
+++ b/Manager/manager.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     font-family: 'Georgia', serif;
@@ -252,4 +251,12 @@ line-height: 1;
     text-align: center;
     border: 1px solid black;
     line-height: 1;
+}
+
+footer {
+    background-color:#000000; 
+    color:white; 
+    text-align:center; 
+    padding:1rem; 
+    font-size:0.9rem; 
 }
